--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,12 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "dlt>=1.21.0",
+    "duckdb>=1.4.4",
+    "google-cloud-storage>=3.9.0",
+    "jupyter>=1.1.1",
+    "pandas>=3.0.0",
+    "pyarrow>=23.0.0",
+    "requests>=2.32.5",
+]
